# dockadmin

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-publish.yml  labeler.yml  welcome.yml
backend/: .gitignore  Cargo.toml
backend/src/: auth.rs  main.rs  server.rs  sql_utils.rs  state.rs
backend/src/models/: connection.rs  data.rs  export.rs  mod.rs  query.rs  response.rs  schema.rs  session.rs
backend/src/routes/: connection.rs  data.rs  database.rs  export.rs  mod.rs  query.rs  schema.rs
ui/: package-lock.json  package.json
ui/src/: index.css  main.tsx
ui/src/api/: auth.ts  client.ts  data.ts  database.ts  export.ts  index.ts  query.ts  schema.ts
ui/src/assets/: logo.tsx
ui/src/assets/svgs/: AddIcon.tsx  DeleteIcon.tsx  EditIcon.tsx  LogOutIcon.tsx  Logo.tsx  SQLIcon.tsx  SearchIcon.tsx  TableIcon.tsx
ui/src/components/data/: DataGrid.tsx  DataGridFooter.tsx  DataGridHeader.tsx  RelationshipsPanel.tsx  SQLEditor.tsx  SchemaView.tsx  index.ts
ui/src/components/layout/: DashboardLayout.tsx  Sidebar.tsx
ui/src/components/modals/: AddColumnModal.tsx  AddRowModal.tsx  ColumnModal.tsx  (+4 more)
ui/src/context/: AuthContext.tsx
ui/src/hooks/: useQueries.ts
ui/src/lib/: queryClient.ts  utils.ts
ui/src/models/: connection.ts  index.ts  table.ts
ui/src/routes/: __root.tsx  dashboard.tsx  index.tsx
ui/src/types/: api.ts
(+4 files in other folders)
