[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5", features = ["fs", "cors", "add-extension"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "postgres", "mysql", "sqlite", "macros"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"